fix: Remove blur edge artifacts by expanding pseudo-elements and clipping overflow

--- a/css/style.css
+++ b/css/style.css
@@ -292,16 +292,17 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 100%;
   float: left;
   position: relative;
+  overflow: hidden;
 }
 
 .gtco-bg::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-size: cover;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: -10px;
+  background-size: 105% 105%;
   background-position: center center;
   background-repeat: no-repeat;
   background-image: inherit;
@@ -376,15 +377,16 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
   float: left;
   width: 100%;
+  overflow: hidden;
 }
 
 .gtco-cover::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: -10px;
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
